# kraken-api-client

./: Cargo.toml  LICENCE  README.md
examples/: auth_credentials.rs  earn.rs  error_handling.rs  funding.rs  futures_private.rs  futures_public.rs  futures_ws_private.rs  futures_ws_public.rs  public_data.rs  rate_limit.rs  serde_helpers.rs  spot_earn_status.rs  spot_funding_advanced.rs  spot_private_account.rs  spot_private_trading.rs  spot_trait_object.rs  spot_trait_usage.rs  spot_ws_market_data.rs  spot_ws_trading.rs  types_common.rs  types_last_and_data.rs  ws_config.rs  ws_ticker.rs
src/: error.rs  lib.rs
src/auth/: credentials.rs  mod.rs  nonce.rs  signature.rs
src/futures/: auth.rs  mod.rs  types.rs
src/futures/rest/: client.rs  endpoints.rs  mod.rs  types.rs
src/futures/ws/: client.rs  messages.rs  mod.rs  stream.rs
src/rate_limit/: client.rs  keyed.rs  mod.rs  trading.rs  ttl_cache.rs
src/spot/: mod.rs
src/spot/rest/: client.rs  endpoints.rs  mod.rs  traits.rs
src/spot/rest/private/: mod.rs  types.rs
src/spot/rest/public/: mod.rs  types.rs
src/spot/ws/: client.rs  mod.rs  stream.rs
src/spot/ws/messages/: admin.rs  base.rs  market_data.rs  mod.rs  trading.rs  user_data.rs
src/types/: common.rs  last_and_data.rs  mod.rs  serde_helpers.rs
tests/: futures_rest_integration.rs  live_smoke.rs  rest_integration.rs  spot_public_integration.rs
