[package]
categories = ["api-bindings", "asynchronous", "finance"]
description = "An async Rust client library for the Kraken exchange REST and WebSocket v2 APIs"
documentation = "https://docs.rs/kraken-api-client"
edition = "2024"
exclude = [".archive/*", "target/*", "third-party/*", ".env"]
keywords = ["kraken", "crypto", "trading", "async", "tokio"]
license = "MIT"
name = "kraken-api-client"
readme = "README.md"
repository = "https://github.com/dcompoze/kraken-api-client"
rust-version = "1.85"
version = "0.1.0"

[lib]
name = "kraken_api_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
futures-util = "0.3"
governor = "0.8"
hmac = "0.12"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
reqwest-tracing = "0.6"
rust_decimal = { version = "1.39", features = ["serde-with-str"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7"
serde_with = { version = "3.14", features = ["time_0_3"] }
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.49", features = ["full"] }
tokio-test = "0.4"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
